warp tool; bug fix
Former-commit-id: 6e34861460c015ee77124067524bb239fad2a356

--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -58,6 +58,10 @@ ANTS.Library.Path=/groups/jacs/jacsHosts/servers/jacs/executables/Qt-4.7.4-redha
 FLIRT.Bin.Path=/nrs/scicompsoft/yuy/Toolkits/FSL/flirt
 FLIRT.Library.Path=/groups/jacs/jacsHosts/servers/jacs/executables/Qt-4.7.4-redhat/lib
 
+# WARP - ANTS Warp transformations
+WARP.Bin.Path=/nrs/scicompsoft/yuy/Toolkits/ANTS/antsApplyTransforms
+WARP.Library.Path=/groups/jacs/jacsHosts/servers/jacs/executables/Qt-4.7.4-redhat/lib
+
 # Alignment script
 Alignment.Script.Path=/groups/jacs/jacsDev/servers/foster-ws/executables/scripts/brainaligner/brainalign40xMCFO_INT.sh
 Alignment.Library.Path=/groups/jacs/jacsHosts/servers/jacs/executables/Qt-4.7.4-redhat/lib:/groups/jacs/jacsHosts/servers/jacs/executables/vaa3d-redhat/lib
