changed the path to yuy path
Former-commit-id: 555da3240f7ca901e4f5af310569383c9aa555c4

--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -47,8 +47,8 @@ ImageMagick.Montage.Name=montage
 FFMPEG.Bin.Path=ffmpeg/ffmpeg
 
 # VAA3D
-VAA3D.Bin.Path=vaa3d-redhat/vaa3d
-VAA3D.Library.Path=/groups/jacs/jacsHosts/servers/jacs/executables/Qt-4.7.4-redhat/lib:/groups/jacs/jacsHosts/servers/jacs/executables/vaa3d-redhat/lib
+VAA3D.Bin.Path=/nrs/scicompsoft/yuy/Toolkits/Vaa3D/vaa3d
+VAA3D.Library.Path=/groups/jacs/jacsHosts/servers/jacs/executables/Qt-4.7.4-redhat/lib:/nrs/scicompsoft/yuy/Toolkits/Vaa3D/plugins
 
 # ANTS - Advanced Normalization Tools
 ANTS.Bin.Path=/nrs/scicompsoft/yuy/Toolkits/ANTS/ANTS
@@ -64,7 +64,7 @@ WARP.Library.Path=/groups/jacs/jacsHosts/servers/jacs/executables/Qt-4.7.4-redha
 
 # Alignment script
 Alignment.Script.Path=/groups/jacs/jacsDev/servers/foster-ws/executables/scripts/brainaligner/brainalign40xMCFO_INT.sh
-Alignment.Library.Path=/groups/jacs/jacsHosts/servers/jacs/executables/Qt-4.7.4-redhat/lib:/groups/jacs/jacsHosts/servers/jacs/executables/vaa3d-redhat/lib
+Alignment.Library.Path=/groups/jacs/jacsHosts/servers/jacs/executables/Qt-4.7.4-redhat/lib:/nrs/scicompsoft/yuy/Toolkits/Vaa3D/plugins
 Alignment.TarSxExt.DX=1933
 Alignment.TarSxExt.DY=1713
 Alignment.TarSxExt.DZ=640
