--- a/jacs2-services/build.gradle
+++ b/jacs2-services/build.gradle
@@ -1,7 +1,11 @@
 project(":jacs2-services") {
+
     dependencies {
-        compile CDI_API_LIB,
+        compile project(":jacs2-cont"),
+	        CDI_API_LIB,
                 CMDLINE_ARG_LIB,
+		COMMONS_IO_LIB,
+                COMMONS_JXPATH_LIB,
                 DRMAA1_LIB,
                 JACKSON_ANNOTATIONS_LIB,
                 JACKSON_CORE_LIB,
@@ -10,4 +14,5 @@ project(":jacs2-services") {
                 MONGODB_DRIVER_LIB,
                 REFLECTIONS_LIB
     }
+
 }
