--- a/deps.gradle
+++ b/deps.gradle
@@ -28,7 +28,7 @@ dependencies {
         COMMONS_COLLECTIONS_VERSION = "4.1"
         COMMONS_COLLECTIONS_LIB = "org.apache.commons:commons-collections4:${COMMONS_COLLECTIONS_VERSION}"
         COMMONS_COMPRESS_LIB = "org.apache.commons:commons-compress:1.13"
-	COMMONS_IO_LIB = "commons-io:commons-io:2.5"
+        COMMONS_IO_LIB = "commons-io:commons-io:2.5"
 
         COMMONS_JXPATH_LIB = "commons-jxpath:commons-jxpath:1.3"
 
@@ -62,6 +62,10 @@ dependencies {
 
         // coroutines
         COROUTINE_LIB = "com.offbynull.coroutines:user:1.2.3"
+        JAVAFLOW_LIB = "net.tascalate.javaflow:net.tascalate.javaflow.api:2.0"
+        JAVAFLOW_EXTRAS_LIB = "net.tascalate.javaflow:net.tascalate.javaflow.extras:2.0"
+	JAVAFLOW_CDI_AGENT_LIB = "net.tascalate.javaflow:net.tascalate.javaflow.tools.cdi-javaagent:2.0"
+	JAVAFLOW_AGENT_LIB = "net.tascalate.javaflow:net.tascalate.javaflow.tools.javaagent:2.0"
 
         // testing
         JUNIT_VERSION = "4.12"
