channel map service
Former-commit-id: db161a7f7c7ecf198d398ea4af0aba73eb2858a5

--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -30,7 +30,8 @@ Sage.Perllib=/groups/jacs/jacsHosts/servers/jacs-data/executables/perl5-sl7/lib/
 # External scripts
 LSMJSONDump.CMD=scripts/single_neuron/LsmTools/lsm_json_dump.pl
 Convert.ScriptPath=scripts/single_neuron/ImageTools/convert.sh
-LSMMerge.ScriptPath=scripts/single_neuron/MergePipeline/imgMerge.sh # MERGE_PIPELINE_SCRIPT
+# Merge pipeline
+LSMMerge.ScriptPath=scripts/single_neuron/MergePipeline/imgMerge.sh
 
 # Fiji & Fiji macros
 Fiji.Bin.Path=Fiji.app/ImageJ-linux64
