--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -32,6 +32,8 @@ LSMJSONDump.CMD=scripts/single_neuron/LsmTools/lsm_json_dump.pl
 Convert.ScriptPath=scripts/single_neuron/ImageTools/convert.sh
 # Merge pipeline
 LSMMerge.ScriptPath=scripts/single_neuron/MergePipeline/imgMerge.sh
+# Mip creation script
+MipCreator.ScriptPath=scripts/single_neuron/NeuronSeparator/mipCreator.sh
 
 # Fiji & Fiji macros
 Fiji.Bin.Path=Fiji.app/ImageJ-linux64
