started to add sage tools
Former-commit-id: 79ddf75da94ad5ce4f6397ba9a06395b3d14e6dc

--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -27,8 +27,11 @@ Perl.Path=/misc/sc/jacs-perl/bin/perl
 # Sage library paths
 Sage.Perllib=/groups/jacs/jacsHosts/servers/jacs-data/executables/perl5-sl7/lib/perl5/:/misc/sc/jacs-perl/lib/site_perl/5.24.0:/misc/local/perl5/lib/perl5
 
-# External scripts
+# LSM metadata scripts
 LSMJSONDump.CMD=scripts/single_neuron/LsmTools/lsm_json_dump.pl
+# Sage loader
+SageLoader.CMD=scripts/sage/bin/sage_loader.pl
+# Image convert
 Convert.ScriptPath=scripts/single_neuron/ImageTools/convert.sh
 # Merge pipeline
 LSMMerge.ScriptPath=scripts/single_neuron/MergePipeline/imgMerge.sh
