Split the DAO interface into a ReadOnly and a ReadWrite DAO; split async and sync services into one app - still under the same directory
Former-commit-id: 60919f65aa2c45d53cfc82cad14abaff6cbc1783

--- a/jacs2-web/build.gradle
+++ b/jacs2-web/build.gradle
@@ -18,4 +18,28 @@ project(":jacs2-web") {
                 UNDERTOW_CORE_LIB,
                 UNDERTOW_SERVLET_LIB
     }
+
+    task createAllStartScripts() << {
+     	 // just a placeholder
+    }
+    
+    def scripts = [
+    	'mainAsyncServicesApp': 'org.janelia.jacs2.app.AsyncServicesApp',
+	'mainSyncServicesApp': 'org.janelia.jacs2.app.SyncServicesApp'
+
+    ]
+
+    scripts.each() { scriptName, className ->
+          def t = tasks.create(name: scriptName+'StartScript', type: CreateStartScripts) {
+              mainClassName = className
+              applicationName = scriptName
+              outputDir = new File(project.buildDir, 'scripts')
+              classpath = jar.outputs.files + project.configurations.runtime
+    	  }
+      	  applicationDistribution.into("bin") {
+              from(t)
+              fileMode = 0755
+   	  }
+    	  createAllStartScripts.dependsOn(t)
+    }
 }
