split the async and sync webapp into two projects
Former-commit-id: be52f843f977f9590979842253e986f103c3f520

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,7 @@
 rootProject.name = 'jacs2'
 
 include 'jacs2-services'
-include 'jacs2-web'
+include 'jacs2-commonweb'
+include 'jacs2-asyncweb'
+include 'jacs2-syncweb'
 include 'jacs2-admin' 
