sage connection producer
Former-commit-id: 0a0f9f12f33f5a79693197955bf3094a431afcfe

--- a/jacs2-services/build.gradle
+++ b/jacs2-services/build.gradle
@@ -9,5 +9,7 @@ project(":jacs2-services") {
                 JACKSON_DATATYPE_JODA_LIB,
                 MONGODB_DRIVER_LIB,
                 REFLECTIONS_LIB
+
+        runtime MYSQL_DRIVER_LIB
     }
 }
