--- a/deps.gradle
+++ b/deps.gradle
@@ -18,6 +18,7 @@ dependencies {
 
         // database drivers
         MONGODB_DRIVER_LIB = "org.mongodb:mongodb-driver:3.4.2"
+        MYSQL_DRIVER_LIB = "mysql:mysql-connector-java:6.0.6"
 
         // apache commons
         COMMONS_LANG_VERSION = "3.5"
