--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -1,6 +1,11 @@
 MongoDB.ConnectionURL=mongodb://localhost:27017/?maxPoolSize=20&maxIdleTimeMS=1000
 MongoDB.Database=jacs
 
+sage.db.driver=com.mysql.jdbc.Driver
+sage.db.url=jdbc:mysql://mysql3:3306/sage?useCursorFetch=true&rewriteBatchedStatements=true&useServerPrepStmts=true&cachePrepStmts=true
+sage.db.user=sageRead
+sage.db.password=sageRead
+
 TimebasedIdentifierGenerator.DeploymentContext=0
 
 service.DefaultWorkingDir=
