use jdbc datasource; populate all line and image properties into a map; mysql jdbc driver doesn't work with a 5.x server
Former-commit-id: 396b683a139ddf3cbbd2cf95e33b1c34d7f47d86

--- a/jacs2-services/build.gradle
+++ b/jacs2-services/build.gradle
@@ -3,6 +3,7 @@ project(":jacs2-services") {
         compile CDI_API_LIB,
                 CMDLINE_ARG_LIB,
                 DRMAA1_LIB,
+                DBCP_LIB,
                 JACKSON_ANNOTATIONS_LIB,
                 JACKSON_CORE_LIB,
                 JACKSON_DATABIND_LIB,
