--- a/deps.gradle
+++ b/deps.gradle
@@ -18,7 +18,8 @@ dependencies {
 
         // database drivers
         MONGODB_DRIVER_LIB = "org.mongodb:mongodb-driver:3.4.2"
-        MYSQL_DRIVER_LIB = "mysql:mysql-connector-java:6.0.6"
+        MYSQL_DRIVER_LIB = "mysql:mysql-connector-java:5.1.42"
+	DBCP_LIB = "org.apache.commons:commons-dbcp2:2.1.1"
 
         // apache commons
         COMMONS_LANG_VERSION = "3.5"
