code to allow multiple instances running simultaneously against the same DB
Former-commit-id: ea3a57f25a0a2f1fab75e3b3ca39584f47143f37

--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -20,6 +20,7 @@ service.executor.ThreadPoolSize=400
 
 service.suspendedTasksExecutor.ThreadPoolSize=400
 
+service.queue.id=jacs
 service.queue.MaxCapacity=100
 service.queue.InitialDelayInSeconds=30
 service.queue.PeriodInSeconds=10
