--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -25,6 +25,8 @@ service.queue.MaxCapacity=100
 service.queue.InitialDelayInSeconds=30
 service.queue.PeriodInSeconds=10
 
+service.maxRunningProcesses=-1
+
 Executables.ModuleBase=/groups/jacs/jacsHosts/servers/jacs/executables
 
 # External executables
