limit the number of processes for fiji and fileCopy
Former-commit-id: 436eb0e27f918c14639e901a12b2ad0ffe362c9f

--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -26,6 +26,8 @@ service.queue.InitialDelayInSeconds=30
 service.queue.PeriodInSeconds=10
 
 service.maxRunningProcesses=-1
+service.fileCopy.maxRunningProcesses=1
+service.fijiMacro.maxRunningProcesses=2
 
 Executables.ModuleBase=/groups/jacs/jacsHosts/servers/jacs/executables
 
