for now added a property to run fiji headless by default
Former-commit-id: ba7c2db625624c03ffd0654d454281d498f793fe

--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -51,6 +51,7 @@ MipCreator.ScriptPath=scripts/single_neuron/NeuronSeparator/mipCreator.sh
 # Fiji & Fiji macros
 Fiji.Bin.Path=Fiji.app/ImageJ-linux64
 Fiji.Macro.Path=scripts/single_neuron/FijiMacros
+Fiji.RunHeadless=false
 
 Fiji.BasicMIPsAndMovies=Basic_MIP_StackAvi.ijm
 Fiji.DistortionCorrection=Chromatic_abberation_pipeline.ijm
