neuron separator processor - untested
Former-commit-id: 7e439216036208506040c927b6fb0107c4caf746

--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -86,3 +86,7 @@ Alignment.Library.Path=/groups/jacs/jacsHosts/servers/jacs/executables/Qt-4.7.4-
 Alignment.TarSxExt.DX=1933
 Alignment.TarSxExt.DY=1713
 Alignment.TarSxExt.DZ=640
+
+# Neuron separation
+NeuronSeparator.Script.Path=scripts/single_neuron/NeuronSeparator/separatePipeline.sh
+NeuronSeparator.Library.Path=/groups/jacs/jacsHosts/servers/jacs/executables/Qt-4.7.4-redhat/lib
