updated the paths
Former-commit-id: c1140ddba8cbd52564d267fdf2040e4509a50aab

--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -65,28 +65,28 @@ ImageMagick.Montage.Name=montage
 FFMPEG.Bin.Path=ffmpeg/ffmpeg
 
 # VAA3D
-VAA3D.Bin.Path=/groups/jacs/jacsHosts/servers/jacs-data4/executables/vaa3d-preprod/Vaa3D/vaa3d
-VAA3D.Library.Path=/groups/jacs/jacsHosts/servers/jacs-data4/executables/Qt-4.7.4-redhat/lib:/groups/jacs/jacsHosts/servers/jacs-data4/executables/vaa3d-preprod/Vaa3D/plugins
+VAA3D.Bin.Path=vaa3d-redhat/vaa3d
+VAA3D.Library.Path=/groups/jacs/jacsHosts/servers/jacs/executables/Qt-4.7.4-redhat/lib:/groups/jacs/jacsHosts/servers/jacs-data4/executables/vaa3d-redhat/plugins
 
 # ANTS - Advanced Normalization Tools
-ANTS.Bin.Path=/groups/jacs/jacsHosts/servers/jacs-data4/executables/vaa3d-preprod/ANTS/ANTS
-ANTS.Library.Path=/groups/jacs/jacsHosts/servers/jacs-data4/executables/Qt-4.7.4-redhat/lib
+ANTS.Bin.Path=scripts_5.12/single_neuron/Toolkits/ANTS
+ANTS.Library.Path=/groups/jacs/jacsHosts/servers/jacs/executables/Qt-4.7.4-redhat/lib
 
 # FLIRT - FMRIB Linear Image Registration
-FLIRT.Bin.Path=/groups/jacs/jacsHosts/servers/jacs-data4/executables/vaa3d-preprod/FSL/flirt
-FLIRT.Library.Path=/groups/jacs/jacsHosts/servers/jacs-data4/executables/Qt-4.7.4-redhat/lib
+FLIRT.Bin.Path=scripts_5.12/single_neuron/Toolkits/FSL/flirt
+FLIRT.Library.Path=/groups/jacs/jacsHosts/servers/jacs/executables/Qt-4.7.4-redhat/lib
 
 # WARP - ANTS Warp transformations
-WARP.Bin.Path=/groups/jacs/jacsHosts/servers/jacs-data4/executables/vaa3d-preprod/ANTS/WarpImageMultiTransform
-WARP.Library.Path=/groups/jacs/jacsHosts/servers/jacs-data4/executables/Qt-4.7.4-redhat/lib
+WARP.Bin.Path=scripts_5.12/single_neuron/Toolkits/ANTS/WarpImageMultiTransform
+WARP.Library.Path=/groups/jacs/jacsHosts/servers/jacs/executables/Qt-4.7.4-redhat/lib
 
 # Alignment script
-Alignment.Script.Path=/groups/jacs/jacsDev/servers/foster-ws/executables/scripts/brainaligner/brainalign40xMCFO_INT.sh
-Alignment.Library.Path=/groups/jacs/jacsHosts/servers/jacs-data4/executables/Qt-4.7.4-redhat/lib:/groups/jacs/jacsHosts/servers/jacs-data4/executables/vaa3d-preprod/Vaa3D/plugins
+Alignment.Script.Path=scripts_5.12/brainaligner/brainalign40xMCFO_INT.sh
+Alignment.Library.Path=/groups/jacs/jacsHosts/servers/jacs/executables/Qt-4.7.4-redhat/lib:/groups/jacs/jacsHosts/servers/jacs-data4/executables/vaa3d-redhat/plugins
 Alignment.TarSxExt.DX=1933
 Alignment.TarSxExt.DY=1713
 Alignment.TarSxExt.DZ=640
 
 # Neuron separation
-NeuronSeparator.Script.Path=scripts/single_neuron/NeuronSeparator/separatePipeline.sh
-NeuronSeparator.Library.Path=/groups/jacs/jacsHosts/servers/jacs-data4/executables/Qt-4.7.4-redhat/lib
+NeuronSeparator.Script.Path=scripts_5.12/single_neuron/NeuronSeparator/separatePipeline.sh
+NeuronSeparator.Library.Path=/groups/jacs/jacsHosts/servers/jacs/executables/Qt-4.7.4-redhat/lib:/groups/jacs/jacsHosts/servers/jacs-data4/executables/vaa3d-redhat/plugins
