added neuron warped service - which is pretty much identical with the neuronseparation except it requires consolidated labels
Former-commit-id: 949244f9f6aed3f702f2c048dcc3896fc8a3ff2c

--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -90,3 +90,6 @@ Alignment.TarSxExt.DZ=640
 # Neuron separation
 NeuronSeparator.Script.Path=scripts_5.12/single_neuron/NeuronSeparator/separatePipeline.sh
 NeuronSeparator.Library.Path=/groups/jacs/jacsHosts/servers/jacs/executables/Qt-4.7.4-redhat/lib:/groups/jacs/jacsHosts/servers/jacs-data4/executables/vaa3d-redhat/plugins
+
+NeuronWarping.Script.Path=scripts_5.12/single_neuron/NeuronSeparator/warpedPipeline.sh
+NeuronWarping.Library.Path=/groups/jacs/jacsHosts/servers/jacs/executables/Qt-4.7.4-redhat/lib:/groups/jacs/jacsHosts/servers/jacs-data4/executables/vaa3d-redhat/plugins
