introduced the runner script for starting the alignment
Former-commit-id: 31e24baf338a9f1650835996e8cd7e68ddbac04d

--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -81,11 +81,9 @@ WARP.Bin.Path=scripts_5.12/single_neuron/Toolkits/ANTS/WarpImageMultiTransform
 WARP.Library.Path=/groups/jacs/jacsHosts/servers/jacs/executables/Qt-4.7.4-redhat/lib
 
 # Alignment script
-Alignment.Script.Path=scripts_5.12/brainaligner/brainalign40xMCFO_INT.sh
+Alignment.Tools.Path=scripts_5.12/single_neuron/Toolkits
+Alignment.Scripts.Path=scripts_5.12/brainaligner
 Alignment.Library.Path=/groups/jacs/jacsHosts/servers/jacs/executables/Qt-4.7.4-redhat/lib:/groups/jacs/jacsHosts/servers/jacs-data4/executables/vaa3d-redhat/plugins
-Alignment.TarSxExt.DX=1933
-Alignment.TarSxExt.DY=1713
-Alignment.TarSxExt.DZ=640
 
 # Neuron separation
 NeuronSeparator.Script.Path=scripts_5.12/single_neuron/NeuronSeparator/separatePipeline.sh
