alignment runner was not configured
Former-commit-id: 8b5044aa92dafa2bfd48d58261fcb4e6e86460e1

--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -81,6 +81,7 @@ WARP.Bin.Path=scripts_5.12/single_neuron/Toolkits/ANTS/WarpImageMultiTransform
 WARP.Library.Path=/groups/jacs/jacsHosts/servers/jacs/executables/Qt-4.7.4-redhat/lib
 
 # Alignment script
+Alignment.Runner.Path=scripts_5.12/single_neuron/BrainAligner/run_configured_aligner.sh
 Alignment.Tools.Path=scripts_5.12/single_neuron/Toolkits
 Alignment.Scripts.Path=scripts_5.12/brainaligner
 Alignment.Library.Path=/groups/jacs/jacsHosts/servers/jacs/executables/Qt-4.7.4-redhat/lib:/groups/jacs/jacsHosts/servers/jacs-data4/executables/vaa3d-redhat/plugins
