updated imagemagick path
Former-commit-id: 9b4487c80a84f3cbd95d8d4ee7064a583922bda1

--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -57,8 +57,8 @@ Fiji.BasicMIPsAndMovies=Basic_MIP_StackAvi.ijm
 Fiji.DistortionCorrection=Chromatic_abberation_pipeline.ijm
 
 # ImageMagick
-ImageMagick.Bin.Path=ImageMagick-7.0.2-9-sl7/bin
-ImageMagick.Lib.Path=ImageMagick-7.0.2-9-sl7/lib
+ImageMagick.Bin.Path=ImageMagick/bin
+ImageMagick.Lib.Path=ImageMagick/lib
 ImageMagick.Montage.Name=montage
 
 # FFMPEG
