--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -56,6 +56,8 @@ Fiji.RunHeadless=false
 Fiji.BasicMIPsAndMovies=Basic_MIP_StackAvi.ijm
 Fiji.DistortionCorrection=Chromatic_abberation_pipeline.ijm
 
+Fiji.EnhancedMIPsAndMovies=Enhanced_MIP_StackAvi.ijm
+
 # ImageMagick
 ImageMagick.Bin.Path=ImageMagick/bin
 ImageMagick.Lib.Path=ImageMagick/lib
