--- a/build.gradle
+++ b/build.gradle
@@ -49,11 +49,18 @@ subprojects {
         }
     }
 
+    idea {
+        module {
+            testSourceDirs += [file('src/integration-test/java'), file('src/integration-test/resources')]
+            scopes.TEST.plus += [configurations.integrationTestRuntime, configurations.integrationTestCompile]
+        }
+    }
+
     sourceCompatibility = 1.8
     targetCompatibility = 1.8
 
     task integrationTest(type: Test) {
-        testClassesDir = sourceSets.integrationTest.output.classesDir
+        testClassesDirs += sourceSets.integrationTest.output.classesDirs
         classpath = sourceSets.integrationTest.runtimeClasspath
     }
 
@@ -62,5 +69,5 @@ subprojects {
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = "3.1"
+    gradleVersion = "4.0"
 }
