LSF PAC submitter
remove previous instance of LSFPacHelper

Generic cmd processor + some updated memory requirements


Former-commit-id: 3e1c8341b91c8ac832425a6d8ebbe1814dc5af19

--- a/deps.gradle
+++ b/deps.gradle
@@ -55,6 +55,11 @@ dependencies {
         // drmaa
         DRMAA1_LIB = "us.levk:drmaa-gridengine:6.2u5"
 
+        // http
+        HTTPCOMPONENT_VERSION = "4.5.3"
+        HTTPCOMPONENT_LIB = "org.apache.httpcomponents:httpclient:${HTTPCOMPONENT_VERSION}"
+        HTTPMIME_LIB = "org.apache.httpcomponents:httpmime:${HTTPCOMPONENT_VERSION}"
+
         // testing
         JUNIT_VERSION = "4.12"
     }
