--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -6,6 +6,10 @@ sage.db.url=jdbc:mysql://mysql3:3306/sage?useCursorFetch=true&rewriteBatchedStat
 sage.db.user=sageRead
 sage.db.password=sageRead
 
+LSF.PAC.URL=https://lsf-pac:8443
+LSF.user=
+LSF.password=
+
 TimebasedIdentifierGenerator.DeploymentContext=0
 
 service.DefaultWorkingDir=
