--- a/jacs2-services/build.gradle
+++ b/jacs2-services/build.gradle
@@ -4,6 +4,8 @@ project(":jacs2-services") {
                 CMDLINE_ARG_LIB,
                 DRMAA1_LIB,
                 DBCP_LIB,
+                HTTPCOMPONENT_LIB,
+                HTTPMIME_LIB,
                 JACKSON_ANNOTATIONS_LIB,
                 JACKSON_CORE_LIB,
                 JACKSON_DATABIND_LIB,
