Changed PAC helper to use Jersey REST client; added a time condition for checking for job completion
Former-commit-id: 5526abb0ff55b6e9fbee5b862ad162afa4c5260e

--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -29,6 +29,8 @@ service.queue.MaxCapacity=100
 service.queue.InitialDelayInSeconds=30
 service.queue.PeriodInSeconds=10
 
+service.exejob.checkIntervalInMillis=0
+
 service.maxRunningProcesses=-1
 service.fileCopy.maxRunningProcesses=2
 service.fijiMacro.maxRunningProcesses=1
