--- a/deps.gradle
+++ b/deps.gradle
@@ -31,7 +31,9 @@ dependencies {
         JAX_RS_API_LIB = "javax.ws.rs:javax.ws.rs-api:2.0.1"
         JERSEY_VERSION = "2.25.1"
         JAX_RS_CORE_LIB = "org.glassfish.jersey.core:jersey-common:${JERSEY_VERSION}"
+        JAX_RS_CLIENT_LIB = "org.glassfish.jersey.core:jersey-client:${JERSEY_VERSION}"
         JAX_RS_SERVER_LIB = "org.glassfish.jersey.core:jersey-server:${JERSEY_VERSION}"
+        JAX_RS_MEDIA_LIB = "org.glassfish.jersey.media:jersey-media-multipart:${JERSEY_VERSION}"
         JAX_RS_CONTAINERS_LIB = "org.glassfish.jersey.containers:jersey-container-servlet-core:${JERSEY_VERSION}"
         JAX_RS_CDI_EXT_LIB = "org.glassfish.jersey.ext.cdi:jersey-cdi1x-servlet:${JERSEY_VERSION}"
 
@@ -54,11 +56,6 @@ dependencies {
 
         // drmaa
         DRMAA1_LIB = "us.levk:drmaa-gridengine:6.2u5"
-
-        // http
-        HTTPCOMPONENT_VERSION = "4.5.3"
-        HTTPCOMPONENT_LIB = "org.apache.httpcomponents:httpclient:${HTTPCOMPONENT_VERSION}"
-        HTTPMIME_LIB = "org.apache.httpcomponents:httpmime:${HTTPCOMPONENT_VERSION}"
 
         // testing
         JUNIT_VERSION = "4.12"
