sageloader check if the images match what's expected
Former-commit-id: 2a32a23fe6ded17cb2cee02f779e2ce8150a604b

--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -5,6 +5,7 @@ sage.db.driver=com.mysql.jdbc.Driver
 sage.db.url=jdbc:mysql://mysql3:3306/sage?useCursorFetch=true&rewriteBatchedStatements=true&useServerPrepStmts=true&cachePrepStmts=true&serverTimezone=EST
 sage.db.user=sageRead
 sage.db.password=sageRead
+sage.write.environment=production
 
 LSF.PAC.URL=https://lsf-pac:8443
 LSF.user=
