changed sage lib
Former-commit-id: a9c00c875eae2ee4539feb928100ff06ed3633f2

--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -5,7 +5,6 @@ sage.db.driver=com.mysql.jdbc.Driver
 sage.db.url=jdbc:mysql://mysql3:3306/sage?useCursorFetch=true&rewriteBatchedStatements=true&useServerPrepStmts=true&cachePrepStmts=true&serverTimezone=EST
 sage.db.user=sageRead
 sage.db.password=sageRead
-sage.write.environment=production
 
 LSF.PAC.URL=https://lsf-pac:8443
 LSF.user=
@@ -42,12 +41,13 @@ Executables.ModuleBase=/groups/jacs/jacsHosts/servers/jacs-data4/executables
 Perl.Path=/misc/sc/jacs-perl/bin/perl
 
 # Sage library paths
-Sage.Perllib=/groups/jacs/jacsHosts/servers/jacs-data4/executables/perl5-sl7/lib/perl5/:/misc/sc/jacs-perl/lib/site_perl/5.24.0:/misc/local/perl5/lib/perl5
+Sage.Perllib=/groups/jacs/jacsHosts/servers/jacs-data/executables/perl5-sl7/lib/perl5/:/misc/sc/jacs-perl/lib/site_perl/5.24.0:/misc/local/perl5/lib/perl5
 
 # LSM metadata scripts
 LSMJSONDump.CMD=scripts/single_neuron/LsmTools/lsm_json_dump.pl
 # Sage loader
 SageLoader.CMD=scripts/sage/bin/sage_loader.pl
+Sage.write.environment=production
 # Image convert
 Convert.ScriptPath=scripts/single_neuron/ImageTools/convert.sh
 # Merge pipeline
