--- a/deps.gradle
+++ b/deps.gradle
@@ -71,7 +71,9 @@ dependencies {
 
     testCompile "junit:junit:${JUNIT_VERSION}",
                 "org.hamcrest:hamcrest-all:1.3",
-                "org.mockito:mockito-core:2.2.12",
+                "org.mockito:mockito-core:2.3.7",
+                "org.powermock:powermock-module-junit4:1.7.0",
+                "org.powermock:powermock-api-mockito2:1.7.0",
                 "org.assertj:assertj-core:3.6.1"
 
 }
