--- a/jacs2-services/build.gradle
+++ b/jacs2-services/build.gradle
@@ -10,6 +10,7 @@ project(":jacs2-services") {
                 JACKSON_DATATYPE_JODA_LIB,
                 JAX_RS_CLIENT_LIB,
                 JAX_RS_MEDIA_LIB,
+                JUEL_LIB,
                 MONGODB_DRIVER_LIB,
                 REFLECTIONS_LIB
 
