--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -1,5 +1,8 @@
-MongoDB.ConnectionURL=mongodb://localhost:27017/?maxPoolSize=20&maxIdleTimeMS=1000
+MongoDB.ConnectionURL=mongodb://localhost:27017/?maxPoolSize=20&maxIdleTimeMS=500
 MongoDB.Database=jacs
+MongoDB.ThreadsAllowedToBlockForConnectionMultiplier=10
+MongoDB.ConnectionsPerHost=500
+MongoDB.ConnectTimeout=120000
 
 sage.db.url=jdbc:mysql://mysql3:3306/sage?useCursorFetch=true&rewriteBatchedStatements=true&useServerPrepStmts=true&cachePrepStmts=true&serverTimezone=EST
 sage.db.user=sageRead
