cap the number of mergeChannels that can run on a host because it may run out of memory
Former-commit-id: ea926715030baf2c6bd532479bdb49bad5ccb02f

--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -36,6 +36,7 @@ service.exejob.checkIntervalInMillis=0
 service.maxRunningProcesses=-1
 service.fileCopy.maxRunningProcesses=2
 service.fijiMacro.maxRunningProcesses=1
+service.mergeChannels.maxRunningProcesses=2
 
 Executables.ModuleBase=/groups/jacs/jacsHosts/servers/jacs-data4/executables
 
