allow to have a default processing location for every service
Former-commit-id: b9de19a61b054d07d448101542765bd5423619bc

--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -38,6 +38,9 @@ service.fileCopy.maxRunningProcesses=2
 service.fijiMacro.maxRunningProcesses=1
 service.mergeChannels.maxRunningProcesses=2
 
+service.defaultProcessingLocation=LOCAL
+service.lsmFileMetadata.defaultProcessingLocation=LOCAL
+
 Executables.ModuleBase=/groups/jacs/jacsHosts/servers/jacs-data4/executables
 
 # External executables
