changed the task poller to use a scheduled executor as well
Former-commit-id: d5567c0d0a0cf4c8685b7c6fd985b564ea1c1443

--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -24,7 +24,9 @@ service.engine.ProcessingSlots=200
 
 service.executor.ThreadPoolSize=400
 
-service.suspendedTasksExecutor.ThreadPoolSize=400
+service.taskQueue.InitialDelayInMillis=0
+service.taskQueue.PeriodInMillis=50
+service.taskQueue.ThreadPoolSize=5
 
 service.queue.id=jacs
 service.queue.MaxCapacity=100
