added java-lsf job runner implementation
Former-commit-id: 76572b3afab2b245e1515d10498321f028cdf265

--- a/jacs2-services/build.gradle
+++ b/jacs2-services/build.gradle
@@ -14,6 +14,8 @@ project(":jacs2-services") {
                 MONGODB_DRIVER_LIB,
                 REFLECTIONS_LIB
 
+        compile fileTree(dir: 'lib', include: ['*.jar'])
+
         runtime MYSQL_DRIVER_LIB
     }
 }
