moved java-lsf library to a project repository
Former-commit-id: b4f55db08ed3dacd956ccf28de25cdfe7b3f13b3

--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,9 @@ subprojects {
     repositories {
         mavenLocal()
         mavenCentral()
+	flatDir {
+            dirs "${rootDir}/projectrepository"
+	}
     }
 
     eclipse {
