added ktx service, and LVT parent service
Former-commit-id: 1968d451c078ad003cd27dc79d10877653f8d9e9

--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -113,6 +113,9 @@ NeuronWarping.Script.Path=scripts_5.12/single_neuron/NeuronSeparator/warpedPipel
 NeuronWarping.Library.Path=/groups/jacs/jacsHosts/servers/jacs/executables/Qt-4.7.4-redhat/lib:/groups/jacs/jacsHosts/servers/jacs-data4/executables/vaa3d-redhat/plugins
 
 Octree.Bin.Path=jacs2_scripts/octree.jl
+Anaconda.Bin.Path=anaconda/bin
+KTX.Src.Path=jacs2_scripts/pyktx/src
+KTX.Script.Path={KTX.Src.Path}/tools/convert_subtree.py
 
 CMTKAlignment.Runner.Path=/nrs/scicompsoft/yuy/Toolkits/CMTK/bin/munger
 CMTKAlignment.Tools.Path=/nrs/scicompsoft/yuy/Toolkits/CMTK/bin
