--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -1,5 +1,6 @@
 MongoDB.ConnectionURL=mongodb://localhost:27017/?maxPoolSize=20&maxIdleTimeMS=500
 MongoDB.Database=jacs
+MongoDB.FutureDatabase=jacs2
 MongoDB.ThreadsAllowedToBlockForConnectionMultiplier=10
 MongoDB.ConnectionsPerHost=500
 MongoDB.ConnectTimeout=120000
