exclude missing jta dependency
Former-commit-id: b4df22c79d743a4bfa90b4e2d8958e0682652384

--- a/jacs2-services/build.gradle
+++ b/jacs2-services/build.gradle
@@ -13,10 +13,13 @@ project(":jacs2-services") {
                 JUEL_LIB,
                 MONGODB_DRIVER_LIB,
                 JONGO_LIB,
-                HIBERNATE_LIB,
                 REFLECTIONS_LIB,
                 JAVA_LSF_LIB,
                 JACS_MODEL_LIB
+
+        compile (HIBERNATE_LIB) {
+            exclude group: 'javax.transaction'
+        }
 
         runtime MYSQL_DRIVER_LIB
     }
