--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -1,3 +1,5 @@
+jacs.version=DEV
+
 MongoDB.ConnectionURL=mongodb://localhost:27017/?maxPoolSize=20&maxIdleTimeMS=500
 MongoDB.Database=jacs
 MongoDB.FutureDatabase=jacs2
