initial commit of color depth search on spark cluster
Former-commit-id: b14561767742695426e4132ce7900b2183c80b4d

--- a/jacs2-services/build.gradle
+++ b/jacs2-services/build.gradle
@@ -15,7 +15,8 @@ project(":jacs2-services") {
                 JONGO_LIB,
                 REFLECTIONS_LIB,
                 JAVA_LSF_LIB,
-                JACS_MODEL_LIB
+                JACS_MODEL_LIB,
+                SPARK_LAUNCHER
 
         compile (HIBERNATE_LIB) {
             exclude group: 'javax.transaction'
