--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -38,6 +38,8 @@ service.queue.PeriodInSeconds=10
 
 service.exejob.checkIntervalInMillis=0
 
+service.cluster.checkIntervalInSeconds=5
+
 service.maxRunningProcesses=-1
 service.fileCopy.maxRunningProcesses=2
 service.fijiMacro.maxRunningProcesses=1
