added authorization for storage service invocation
Former-commit-id: 5dacaf95f7c3733836b44c76b8a5bdaf3563960b

--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -46,6 +46,8 @@ service.mergeChannels.maxRunningProcesses=2
 service.defaultProcessingLocation=LOCAL
 service.lsmFileMetadata.defaultProcessingLocation=LOCAL
 
+StorageService.ApiKey=
+
 Executables.ModuleBase=/groups/jacs/jacsHosts/servers/jacs-data4/executables
 
 # External executables
