--- a/deps.gradle
+++ b/deps.gradle
@@ -36,6 +36,7 @@ dependencies {
         JAX_RS_CLIENT_LIB = "org.glassfish.jersey.core:jersey-client:${JERSEY_VERSION}"
         JAX_RS_SERVER_LIB = "org.glassfish.jersey.core:jersey-server:${JERSEY_VERSION}"
         JAX_RS_MEDIA_LIB = "org.glassfish.jersey.media:jersey-media-multipart:${JERSEY_VERSION}"
+        JERSEY_MEDIA_JSON_LIB = "org.glassfish.jersey.media:jersey-media-json-jackson:${JERSEY_VERSION}"
         JAX_RS_CONTAINERS_LIB = "org.glassfish.jersey.containers:jersey-container-servlet-core:${JERSEY_VERSION}"
         JAX_RS_CDI_EXT_LIB = "org.glassfish.jersey.ext.cdi:jersey-cdi1x-servlet:${JERSEY_VERSION}"
 
