--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -50,6 +50,24 @@ service.lsmFileMetadata.defaultProcessingLocation=LOCAL
 
 Executables.ModuleBase=/groups/jacs/jacsHosts/servers/jacs-data4/executables
 
+# Spark services
+service.spark.nodeSlots=16
+service.spark.sparkVersion=2
+service.spark.sparkHomeDir=/misc/local/spark-2
+service.spark.driver.memory=1g
+service.spark.executor.memory=75g
+service.spark.executor.cores=15
+service.spark.cluster.hard.duration.mins=30
+service.spark.log4jconfig.filepath={Executables.ModuleBase}/colormipsearch/log4j.properties
+hadoop.homeDir=/misc/local/hadoop-2.6.4
+
+# Color depth search
+service.colorDepthSearch.clusterStartTimeoutInSeconds=3600
+service.colorDepthSearch.searchTimeoutInSeconds=1200
+service.colorDepthSearch.numNodes=6
+service.colorDepthSearch.jarPath={Executables.ModuleBase}/colormipsearch/colormipsearch-1.0-jar-with-dependencies.jar
+service.colorDepthSearch.parallelism=300
+
 # External executables
 Perl.Path=/misc/sc/jacs-perl/bin/perl
 
