--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -124,3 +124,5 @@ CMTKAlignment.Runner.Path=/groups/jacs/jacsHosts/common/cmtk-scm-2017-10-01/bin/
 CMTKAlignment.Tools.Path=/groups/jacs/jacsHosts/common/cmtk-scm-2017-10-01/bin
 CMTKAlignment.DefaultTemplate.File=/nrs/scicompsoft/otsuna/JFRC2010_BrainAligner/JFRC2010_16bit.nrrd
 CMTKAlignment.Library.Path=/groups/jacs/jacsHosts/servers/jacs/executables/Qt-4.7.4-redhat/lib:/groups/jacs/jacsHosts/servers/jacs-data4/executables/vaa3d-redhat/plugins
+
+DavidTest.Bin.Path=jacs2_scripts/davidTest.sh
