--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -102,6 +102,7 @@ Fiji.EnhancedMIPsAndMovies=Enhanced_MIP_StackAvi.ijm
 ImageMagick.Bin.Path=ImageMagick/bin
 ImageMagick.Lib.Path=ImageMagick/lib
 ImageMagick.Montage.Name=montage
+ImageMagick.Convert.Name=convert
 
 # FFMPEG
 FFMPEG.Bin.Path=ffmpeg/ffmpeg
