added object-based color depth search, and new parameters
Former-commit-id: 69876903b58e657fb82a58af57ea893f784d1c1f

--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -69,6 +69,7 @@ service.colorDepthSearch.searchTimeoutInSeconds=1200
 service.colorDepthSearch.numNodes=6
 service.colorDepthSearch.jarPath={Executables.ModuleBase}/colormipsearch/colormipsearch-1.0-jar-with-dependencies.jar
 service.colorDepthSearch.parallelism=300
+service.colorDepthSearch.filepath=/nrs/jacs/jacsData/filestore/system/ColorDepthMIPs
 
 # External executables
 Perl.Path=/misc/sc/jacs-perl/bin/perl
